<resources>
    <string name="app_name">Cinematrix</string>
    <string name="title_activity_main">Cinematrix</string>
    <string name="title_activity_movie">MovieActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="explore">Explore</string>
    <string name="category">Category</string>
    <string name="my_profile">My profile</string>
    <string name="favorite">Favorite</string>
    <string name="Year">Год:</string>
    <string name="Country">Страна:</string>
    <string name="Genre">Жанр:</string>
    <string name="Description">Описание:</string>
    <string name="Quality">Качество:</string>
    <string name="Duration">Продолжительность:</string>
    <string name="Translation">Перевод:</string>
    <string name="watch">Watch</string>
    <string name="actrors_label">Актёры:</string>
    <string name="response_error">Receiving of data from server failed</string>
    <string name="retry_button">Retry?</string>
</resources>
