<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MovieActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/movie_title_d_tv"
            app:layout_constraintStart_toEndOf="@+id/movie_title_d_tv">

            <TextView
                android:id="@+id/movie_year_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/Year"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_bl_bg" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/movie_year_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_bl_bg"
                tools:text="2018" />

            <TextView
                android:id="@+id/movie_country_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/Country"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_year_label" />

            <TextView
                android:id="@+id/movie_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/movie_country_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_year_label"
                tools:text="США" />

            <TextView
                android:id="@+id/movie_genre_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/Genre"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_country_label" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/movie_poster"
                app:layout_constraintStart_toEndOf="@+id/movie_genre_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_country_label"
                tools:text="Драма, Боевик, Фантастика" />

            <TextView
                android:id="@+id/movie_translation_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/Translation"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_genre" />

            <TextView
                android:id="@+id/movie_translation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/movie_poster"
                app:layout_constraintStart_toEndOf="@+id/movie_translation_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_genre"
                tools:text="Дублированный [Лицензия]" />

            <TextView
                android:id="@+id/movie_duration_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/Duration"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_translation" />

            <TextView
                android:id="@+id/movie_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_duration_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_translation"
                tools:text="107 мин" />

            <TextView
                android:id="@+id/movie_quality_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/Quality"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_duration" />

            <TextView
                android:id="@+id/movie_quality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/movie_quality_label"
                app:layout_constraintTop_toBottomOf="@+id/movie_duration"
                tools:text="BDRip" />

            <TextView
                android:id="@+id/movie_actors_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/actrors_label"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_quality_label" />

            <RelativeLayout
                android:id="@+id/actors_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/actors_plate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_actors_label">

                <ImageView
                    android:id="@+id/actor_arrow_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="0dp"
                    android:src="@drawable/arrow_left" />

                <ImageView
                    android:id="@+id/actor_arrow_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow_right" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/actors_rec_view"
                    android:layout_width="wrap_content"
                    android:layout_height="136dp"
                    android:layout_marginStart="-4dp"

                    android:layout_marginEnd="-4dp"
                    android:layout_toStartOf="@+id/actor_separator_right"
                    android:layout_toEndOf="@+id/actor_separator_left"
                    android:orientation="horizontal"

                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_actor" />

                <ImageView
                    android:id="@+id/actor_separator_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:layout_toEndOf="@+id/actor_arrow_left"
                    android:src="@drawable/separator_left" />

                <ImageView
                    android:id="@+id/actor_separator_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="2dp"
                    android:layout_toStartOf="@+id/actor_arrow_right"
                    android:src="@drawable/separator_right" />

            </RelativeLayout>

            <TextView
                android:id="@+id/movie_description_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/Description"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actors_container" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/description_bg_text"
                android:fontFamily="@font/roboto_thin"
                android:padding="6dp"
                android:text="  Когда-то Кэрол Дэнверс жила на Земле и была пилотом ВВС США. У неё было трудное детство, она прошла многое, чтобы стать той, кем стала. И всего этого девушка почти не помнит. Виной тому одна авария, которая чуть не забрала её жизнь. Спасли Кэрол инопланетяне из расы Крии. Они решили дать девушке своей крови, приняв в свою расу и сделав её идеальным бойцом в войне с другой жестокой расой Скруллам.
    Кэрол имеет суперсилы: она неуязвима, может летать и создает мощные потоки энергии. Когда полем битвы двух рас становится Земля, девушка начинает вспоминать свою прошлую жизнь. От Кэрол зависит судьба Земли и расы Крии, ведь она одна из самых могущественных существ во Вселенной"
                android:textColor="@color/movie_title_textColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_description_label" />

            <ImageView
                android:id="@+id/movie_bl_bg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_bl_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="153dp"
                android:layout_height="213dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="36dp"
                android:background="@drawable/poster_border"
                android:cropToPadding="true"
                android:padding="2.2dp"
                android:scaleType="fitXY"
                android:src="@drawable/movie_poster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_title_d_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/movie_title_bg"
                android:fontFamily="@font/roboto_bold"
                android:padding="6dp"
                android:text="Капитан марвел"
                android:textAlignment="center"
                android:textColor="@color/movie_title_textColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/play_btn"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/watch_btn"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/watch"
                android:textColor="@color/movie_title_textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/app_bar_activity_movie" />


    <include layout="@layout/plist_bottom_sheet" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>